--- a/gittu-website/index.html
+++ b/gittu-website/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>My first ever website</h1>
     <h3>Look Mama !!! I can pust Github.</h3>
+    <p>Pola pan aragar moto nay re mama</p>
+    <form action="">
+        label: Rakibul<input type="text">
+        lable: Islam<input type="text">
+    </form>
 </body>
 </html>
