done adding button

--- a/gittu-website/index.html
+++ b/gittu-website/index.html
@@ -9,9 +9,8 @@
     <h1>My first ever website</h1>
     <h3>Look Mama !!! I can pust Github.</h3>
     <p>Pola pan aragar moto nay re mama</p>
-    <form action="">
-        label: Rakibul<input type="text">
-        lable: Islam<input type="text">
-    </form>
+    <input type="text">
+    <br>
+    <button>Click me babby</button>
 </body>
 </html>
